Create id #number_two and stile it on css file

--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -3,3 +3,8 @@
     font-family: Verdana, 'DejaVu Sans', 'Sans-serif';
     
 }
+
+#number_two {
+    color: rgb(76, 124, 187);
+    font-size: 36px;
+}
