--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -14,11 +14,13 @@ body {
   background: #e3f4ff;
   margin: 8px;
   font-size: 16px;
+  padding: 8px;
 }
 
 .content {
   background: #e3f4ff;
   margin: 8px;
+  padding: 16px 8px;
 }
 
 .button-container {
