--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -1,6 +1,7 @@
 body {
   background: #eee;
   font-family: sans-serif;
+  box-sizing: border-box;
 }
 
 .card {
@@ -31,4 +32,5 @@ body {
 button {
   background: white;
   border: 1px solid #eee;
+  display: block;
 }
