--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -8,7 +8,7 @@ body {
   width: 400px;
   background: #fff;
   margin: 16px auto;
-  padding: 9px;
+  padding: 8px;
 }
 
 .title {
@@ -27,6 +27,8 @@ body {
 .button-container {
   background: #e3f4ff;
   margin: 8px;
+  padding: 8px;
+  text-align: center;
 }
 
 button {
